# NeuralPlane

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: .gitignore  base.yaml
data/: 8scenes.txt  airplane_split.txt  generate_planes.py  setup_scannetv2.py
doc/: env_setup.md  requirements.txt
neuralplane/frontend/monocular/: snu.py
neuralplane/frontend/planes/: plane_excavator.py
neuralplane/frontend/segment/: sam_tools.py
neuralplane/scripts/: download_models.py
scripts/: launch_all.sh  launch_single.sh
